handling multiple ULBs in data extraction