@@ -11,7 +11,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
+
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -37,9 +37,7 @@ import org.upyog.dashboard.extractor.impl.PtModuleExtractor;
 import org.upyog.dashboard.loader.impl.DashboardDataLoaderImpl;
 import org.upyog.dashboard.model.IngestionResult;
 import org.upyog.dashboard.producer.DashboardProducer;
-import org.upyog.dashboard.pt.dto.PTAggregatedData;
-import org.upyog.dashboard.pt.dto.PTCollectionDTO;
-import org.upyog.dashboard.pt.mapper.PTRowmapper;
+
 import org.upyog.dashboard.registry.ExtractorRegistry;
 import org.upyog.dashboard.registry.TransformerRegistry;
 import org.upyog.dashboard.repository.IngestionSummaryRepository;
@@ -105,7 +103,7 @@ class DateIngestionFlowIntegrationTest {
         objectMapper = new ObjectMapper();
 
         // 1. Configure SchemaMappingConfig with PT query configurations
-        schemaMappingConfig = new SchemaMappingConfig();
+        schemaMappingConfig = new SchemaMappingConfig(Mockito.mock(org.springframework.core.io.ResourceLoader.class));
         schemaMappingConfig.setEnabledModules(List.of(Module.PT));
 
         SchemaMappingConfig.ModuleQueries ptQueries = new SchemaMappingConfig.ModuleQueries();
@@ -117,14 +115,15 @@ class DateIngestionFlowIntegrationTest {
         schemaMappingConfig.setMappings(mappings);
 
         // 2. Setup Extractor
-        ptExtractor = new PtModuleExtractor();
-        TestUtils.setField(ptExtractor, "namedParameterJdbcTemplate", namedParameterJdbcTemplate);
-        TestUtils.setField(ptExtractor, "schemaMappingConfig", schemaMappingConfig);
-        TestUtils.setField(ptExtractor, "ulb", "pg.citya");
-        TestUtils.setField(ptExtractor, "ward", "Block 4");
-        TestUtils.setField(ptExtractor, "region", "Test");
-        TestUtils.setField(ptExtractor, "state", "Punjab");
-        TestUtils.setField(ptExtractor, "dbTenantId", "pg");
+        DashboardProperties ptDashboardProperties = Mockito.mock(DashboardProperties.class);
+        lenient().when(ptDashboardProperties.getMetricUlb()).thenReturn("pg");
+        lenient().when(ptDashboardProperties.getDbMaxAttempts()).thenReturn(3);
+        lenient().when(ptDashboardProperties.getDbBaseDelayMs()).thenReturn(100L);
+        lenient().when(ptDashboardProperties.getDbMaxDelayMs()).thenReturn(500L);
+
+        org.upyog.dashboard.util.HierarchyParser hp = new org.upyog.dashboard.util.HierarchyParser("Block 4", "Test");
+        ptExtractor = new PtModuleExtractor(namedParameterJdbcTemplate, schemaMappingConfig, ptDashboardProperties, hp);
+        ptExtractor.init();
 
         extractorRegistry = new ExtractorRegistry(List.of(ptExtractor));
 
@@ -166,18 +165,11 @@ class DateIngestionFlowIntegrationTest {
         dashboardClient = new DashboardClientImpl(transformerRegistry, httpLoader, commonValidator);
 
         // 7. Setup DailyIngestionService
-        dailyIngestionService = new DailyIngestionService();
-        TestUtils.setField(dailyIngestionService, "dashboardClient", dashboardClient);
-        TestUtils.setField(dailyIngestionService, "extractorRegistry", extractorRegistry);
-        TestUtils.setField(dailyIngestionService, "schemaMappingConfig", schemaMappingConfig);
-        TestUtils.setField(dailyIngestionService, "summaryRepository", summaryRepository);
-        TestUtils.setField(dailyIngestionService, "tenantId", "pg");
-        TestUtils.setField(dailyIngestionService, "defaultStartDateStr", "2026-06-01");
-        TestUtils.setField(dailyIngestionService, "dashboardProperties", dashboardProperties);
+        dailyIngestionService = new DailyIngestionService(dashboardClient, extractorRegistry, schemaMappingConfig, summaryRepository, dashboardProperties);
+        dailyIngestionService.init();
 
         // 8. Setup Controller
-        ingestionTestController = new IngestionTestController();
-        TestUtils.setField(ingestionTestController, "service", dailyIngestionService);
+        ingestionTestController = new IngestionTestController(dailyIngestionService);
     }
 
     @Test
@@ -187,39 +179,35 @@ class DateIngestionFlowIntegrationTest {
         LocalDate targetDate = LocalDate.of(2026, 7, 15);
 
         // 1. Mock DB query responses for the extraction phase
-        PTAggregatedData combinedMetricsResult = PTAggregatedData.builder()
-                .assessments(50)
-                .todaysTotalApplications(120)
-                .todaysClosedApplications(90)
-                .noOfPropertiesPaidToday(35)
-                .todaysApprovedApplications(85)
-                .todaysApprovedApplicationsWithinSLA(80)
-                .avgDaysForApplicationApproval(3)
-                .propertiesRegisteredJson("[{\"name\":\"2025-26\",\"value\":1500}]")
-                .assessedPropertiesJson("[{\"name\":\"RESIDENTIAL\",\"value\":1000},{\"name\":\"COMMERCIAL\",\"value\":500}]")
-                .build();
+        Map<String, Object> combinedMap = new HashMap<>();
+        combinedMap.put("tenantid", "pg.citya.Test.Block 4");
+        combinedMap.put("assessments", 50);
+        combinedMap.put("todaystotalapplications", 120);
+        combinedMap.put("todaysclosedapplications", 90);
+        combinedMap.put("noofpropertiespaidtoday", 35);
+        combinedMap.put("todaysapprovedapplications", 85);
+        combinedMap.put("todaysapprovedapplicationswithinsla", 80);
+        combinedMap.put("avgdaysforapplicationapproval", 3);
+        combinedMap.put("propertiesregisteredjson", "[{\"name\":\"2025-26\",\"value\":1500}]");
+        combinedMap.put("assessedpropertiesjson", "[{\"name\":\"RESIDENTIAL\",\"value\":1000},{\"name\":\"COMMERCIAL\",\"value\":500}]");
 
-        when(namedParameterJdbcTemplate.queryForObject(
+        when(namedParameterJdbcTemplate.queryForList(
                 eq("SELECT assessments, todaystotalapplications FROM pt_metrics WHERE tenantId = :tenantId"), 
-                Mockito.<Map<String, ?>>any(), 
-                eq(PTRowmapper.COMBINED_ROW_MAPPER)))
-                .thenReturn(combinedMetricsResult);
+                Mockito.<Map<String, ?>>any()))
+                .thenReturn(List.of(combinedMap));
 
-        List<PTCollectionDTO> collectionMetricsResult = new ArrayList<>();
-        PTCollectionDTO colRow = PTCollectionDTO.builder()
-                .usageCategory("RESIDENTIAL")
-                .paymentMode("ONLINE")
-                .paymentId("PAY-101")
-                .taxHeadCode("PT_TAX")
-                .taxHeadAmount(15000.0)
-                .build();
-        collectionMetricsResult.add(colRow);
+        Map<String, Object> colMap = new HashMap<>();
+        colMap.put("tenantid", "pg.citya.Test.Block 4");
+        colMap.put("usage_category", "RESIDENTIAL");
+        colMap.put("paymentmode", "ONLINE");
+        colMap.put("paymentid", "PAY-101");
+        colMap.put("taxheadcode", "PT_TAX");
+        colMap.put("tax_head_amount", 15000.0);
 
-        when(namedParameterJdbcTemplate.query(
+        when(namedParameterJdbcTemplate.queryForList(
                 eq("SELECT usage_category, paymentmode, taxheadcode, tax_head_amount FROM pt_collection WHERE tenantId = :tenantId"), 
-                Mockito.<Map<String, ?>>any(), 
-                eq(PTRowmapper.COLLECTION_ROW_MAPPER)))
-                .thenReturn(collectionMetricsResult);
+                Mockito.<Map<String, ?>>any()))
+                .thenReturn(List.of(colMap));
 
         // 2. Mock OAuthTokenService response for the API loading phase
         when(oAuthTokenService.getToken()).thenReturn("test-access-token-999");
@@ -272,12 +260,12 @@ class DateIngestionFlowIntegrationTest {
     void testCompleteIngestionFlow_ViaRestController() throws Exception {
         LocalDate targetDate = LocalDate.of(2026, 7, 20);
 
-        PTAggregatedData combinedMetricsResult = PTAggregatedData.builder()
-                .assessments(10)
-                .todaysTotalApplications(25)
-                .build();
-        when(namedParameterJdbcTemplate.queryForObject(any(String.class), Mockito.<Map<String, ?>>any(), any(org.springframework.jdbc.core.RowMapper.class))).thenReturn(combinedMetricsResult);
-        when(namedParameterJdbcTemplate.query(any(String.class), Mockito.<Map<String, ?>>any(), any(org.springframework.jdbc.core.RowMapper.class))).thenReturn(Collections.emptyList());
+        Map<String, Object> combinedMap = new HashMap<>();
+        combinedMap.put("tenantid", "pg.citya.Test.Block 4");
+        combinedMap.put("assessments", 10);
+        combinedMap.put("todaystotalapplications", 25);
+        when(namedParameterJdbcTemplate.queryForList(eq("SELECT assessments, todaystotalapplications FROM pt_metrics WHERE tenantId = :tenantId"), Mockito.<Map<String, ?>>any())).thenReturn(List.of(combinedMap));
+        when(namedParameterJdbcTemplate.queryForList(eq("SELECT usage_category, paymentmode, taxheadcode, tax_head_amount FROM pt_collection WHERE tenantId = :tenantId"), Mockito.<Map<String, ?>>any())).thenReturn(Collections.emptyList());
 
         when(oAuthTokenService.getToken()).thenReturn("token-abc");
         when(dashboardFeignClient.ingestMetrics(eq(java.net.URI.create(targetApiUrl)), Mockito.anyString()))
@@ -299,8 +287,10 @@ class DateIngestionFlowIntegrationTest {
     void testCompleteIngestionFlow_ApiFailure_DoesNotUpdateTracker() throws Exception {
         LocalDate targetDate = LocalDate.of(2026, 7, 18);
 
-        when(namedParameterJdbcTemplate.queryForObject(any(String.class), Mockito.<Map<String, ?>>any(), any(org.springframework.jdbc.core.RowMapper.class))).thenReturn(new PTAggregatedData());
-        when(namedParameterJdbcTemplate.query(any(String.class), Mockito.<Map<String, ?>>any(), any(org.springframework.jdbc.core.RowMapper.class))).thenReturn(Collections.emptyList());
+        Map<String, Object> combinedMap = new HashMap<>();
+        combinedMap.put("tenantid", "pg.citya.Test.Block 4");
+        when(namedParameterJdbcTemplate.queryForList(eq("SELECT assessments, todaystotalapplications FROM pt_metrics WHERE tenantId = :tenantId"), Mockito.<Map<String, ?>>any())).thenReturn(List.of(combinedMap));
+        when(namedParameterJdbcTemplate.queryForList(eq("SELECT usage_category, paymentmode, taxheadcode, tax_head_amount FROM pt_collection WHERE tenantId = :tenantId"), Mockito.<Map<String, ?>>any())).thenReturn(Collections.emptyList());
         when(oAuthTokenService.getToken()).thenReturn("token-123");
 
         // Mock API throwing exception (e.g. HTTP 500 Server Error)
